--- a/main.css
+++ b/main.css
@@ -1,4 +1,35 @@
 body
 {
+    background-color: ghostwhite;
+}
+
+#LEFT {
     background-color: #167ca2;
+    width: 60%;
+    height: 60%;
+    position: absolute;
+    left:0;
+    top:0;
+}
+#RIGHT {
+    background-color: burlywood;
+    width: 40%;
+    height: 60%;
+    position: absolute;
+    right:0;
+    top:0;
+}
+#FOOTER {
+    background-color: tomato;
+    width: 100%;
+    height: 40%;
+    position: absolute;
+    left:0;
+    bottom:0;
+}
+
+#MAP {
+    margin: 5%;
+    width: 90%;
+    height: 90%;
 }
