--- a/main.css
+++ b/main.css
@@ -24,20 +24,60 @@ body
     left:0;
     bottom:0;
 }
-#SHAPESDIV
-{
-    height: 100%;
-    width: 100%;
-    align-self: center;
-
+#alignMapCenter{
+    display: flex;
+    align-items: center;
+    height:74%;
 }
+#wrapMap
+{
+    margin: 1%;
+    width:100%;
+}
+#wrapper {
+    border-radius: 0.5vmin;
+    background: -moz-linear-gradient(-45deg,  #0b4054 0%, #0a3c4e 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(-45deg, #0b4054 0%, #0a3c4e 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(135deg,  #0b4054 0%,#0a3c4e 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#116381', endColorstr='#005d7f',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+     width: 100%;
+    max-height: 35.89vh;
+    max-width: 53.835vh;
+     /* whatever width you want */
+     display: inline-block;
+     position: relative;
+ }
+#wrapper:after {
+    padding-top: 66.6666666667%;
+    /* 16:9 ratio */
+    display: block;
+    content: '';
+}
+#SHAPESDIV {
+    border-radius: 0.5vmin;
+    width: inherit;
+    height: inherit;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+}
+
 #CHARTDIV
 {
     height: 100%;
 }
 
+.topVisualizations{
+    background: #116381; /* Old browsers */
+    background: -moz-linear-gradient(-45deg,  #116381 0%, #005d7f 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(-45deg,  #116381 0%,#005d7f 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(135deg,  #116381 0%,#005d7f 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#116381', endColorstr='#005d7f',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
+
 #MAP {
-    background-color: #167ca2;
     display: inline-block;
     margin-left: 1%;
     margin-right: 1%;
@@ -52,7 +92,6 @@ body
 
 #CHART {
     overflow: hidden;
-    background-color: #167ca2;
     display: inline-block;
     margin-right: 1%;
     margin-left: 1%;
@@ -66,18 +105,7 @@ body
 .alignMiddle {
     display: flex;
     align-items: center;
-
     height: 100%;
-}
-
-.topVisualizations {
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#116381+0,005d7f+100 */
-    background: #116381; /* Old browsers */
-    background: -moz-linear-gradient(-45deg,  #116381 0%, #005d7f 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(-45deg,  #116381 0%,#005d7f 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(135deg,  #116381 0%,#005d7f 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#116381', endColorstr='#005d7f',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-
 }
 #bottomElts {
     display: inline-block;;
@@ -101,28 +129,22 @@ body
 {
     text-align: left;
     height:16%;
-    width:100%;
-    background-color: #0B4153;
+    width:98%;
     display: flex;
     align-items: center;
     color: #fff;
     padding-left: 2%;
 }
 
-#pseudoTable {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 78%;
-    width: 100%;
-}
 
 #selectDataVisualizationPreferencesHeader
 {
-    padding: 1%;
-    height:4%;
+    display: flex;
+    align-items: center;
+    height:10%;
+    text-align: center;
+    font-size: 25px;
     width:100%;
-    background-color: #082F3D;
     color: #fff;
 }
 
@@ -131,9 +153,8 @@ p {
 }
 .textHeader
 {
-    margin:0;
+    margin-left:auto;
     display: inline-block;
-    margin-right: 4px;
 }
 .largerLabel {
     display: inline-block;
@@ -158,63 +179,27 @@ select{
     background-color: #fff;
     font-family: 'Exo 2', sans-serif;
     font-weight: 600;
-    width: fit-content;
 }
 
 select:disabled {
     opacity: 0.5;
 }
 
-/*input[type=checkbox]:not(old){*/
-    /*width     : 2em;*/
-    /*margin    : 0;*/
-    /*padding   : 0;*/
-    /*font-size : 1em;*/
-    /*opacity   : 0;*/
-/*}*/
-/*input[type=checkbox]:not(old) + label{*/
-    /*display      : inline-block;*/
-    /*margin-left  : -2em;*/
-    /*line-height  : 1.5em;*/
-/*}*/
+#select_Region{
+    color: #fff;
+    font-weight: 400;
+    font-size: 25px;
+    padding: 0;
+    background-color: transparent;
+    margin: 0;
+    border-style: none;
+    width:auto;
+    margin-right: auto;
+}
 
-/*input[type=checkbox]:not(old) + label > span {*/
-    /*display          : inline-block;*/
-    /*width            : 0.875em;*/
-    /*height           : 0.875em;*/
-    /*margin           : 0.25em 0.5em 0.25em 0.25em;*/
-    /*border           : 0.0625em solid #B6CBD2;*/
-    /*border-radius    : 0.25em;*/
-    /*background       : #B6CBD2;*/
-    /*background-image :    -moz-linear-gradient(#fff,#B6CBD2);*/
-    /*background-image :     -ms-linear-gradient(#fff,#B6CBD2);*/
-    /*background-image :      -o-linear-gradient(#fff,#B6CBD2);*/
-    /*background-image : -webkit-linear-gradient(#fff,#B6CBD2);*/
-    /*background-image :         linear-gradient(#fff,#B6CBD2);*/
-    /*vertical-align   : bottom;*/
-/*}*/
-/*input[type=checkbox]:not(old):checked + label > span:before{*/
-    /*content     : '✓';*/
-    /*display     : block;*/
-    /*width       : 1em;*/
-    /*color       : #1786AE;*/
-    /*font-size   : 0.875em;*/
-    /*line-height : 1em;*/
-    /*text-align  : center;*/
-    /*text-shadow : 0 0 0.0714em #082F3D;*/
-    /*font-weight : bold;*/
-/*}*/
-/*input[type=checkbox]:not(old):checked + label > span{*/
-    /*background-image :    -moz-linear-gradient(#B6CBD2,#fff);*/
-    /*background-image :     -ms-linear-gradient(#B6CBD2,#fff);*/
-    /*background-image :      -o-linear-gradient(#B6CBD2,#fff);*/
-    /*background-image : -webkit-linear-gradient(#B6CBD2,#fff);*/
-    /*background-image :         linear-gradient(#B6CBD2,#fff);*/
-/*}*/
-/*input[type=checkbox]:not(old):disabled + label{*/
-    /*opacity: 0.5;*/
-/*}*/
-
+#select_Region:focus {
+    outline:none;
+}
 #pokemon_header {
     text-align: left;
     height:10%;
@@ -332,7 +317,8 @@ select:disabled {
 }
 
 #pokemon_image{
-    width:80%;
+    max-width:80%;
+    height: 75%;
     margin: 5%;
     left:0;
     background:url(holder.svg);
@@ -343,6 +329,10 @@ select:disabled {
 #encloseImage{
     display: block;
     background-color: #082F3D;
+    background: -moz-linear-gradient(-45deg,  #0a3c4e 0%, #082F3D 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(-45deg, #0a3c4e 0%, #082F3D 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(135deg,  #0a3c4e 0%,#082F3D 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#116381', endColorstr='#005d7f',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
     border-radius: 0.5vmin;
     margin-left:2%;
     overflow: hidden;
@@ -352,8 +342,12 @@ select:disabled {
 }
 
 #secondary_div {
-    background-color: #0B4153;
     border-radius: 0.5vmin;
+    background-color: #0b4054;
+    background: -moz-linear-gradient(-45deg,  #0b4054 0%, #0a3c4e 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(-45deg, #0b4054 0%, #0a3c4e 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(135deg,  #0b4054 0%,#0a3c4e 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#116381', endColorstr='#005d7f',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
     margin-left:2%;
     margin-right:2%;
     overflow: visible;
@@ -364,20 +358,21 @@ select:disabled {
 #radar{
     vertical-align: center;
     overflow: visible;
-    height: 94%;
-    width: 48%;
-    margin-right:2%;
+    height: 34vh;
+    width: 34vh;
+    margin-left:2%;
+    margin-right:1%;
     display: inline-block;
-    margin-top: 1%;
-    margin-bottom: 1%;
+    margin-bottom: 2%;
 }
 
 #chord{
     vertical-align: center;
     overflow: visible;
-    height: 94%;
-    width: 48%;
+    height: 34vh;
+    width: 34vh;
     display: inline-block;
-    margin-top: 1%;
-    margin-bottom: 1%;
+    margin-left:1%;
+    margin-right:2%;
+    margin-bottom: 2%;
 }
