working on EV+stats visualization

--- a/main.css
+++ b/main.css
@@ -342,6 +342,12 @@ select:disabled {
 }
 
 #secondary_div {
+    height: 80%;
+    width:94%;
+    display: flex;
+    align-items: center;
+}
+#charts{
     border-radius: 0.5vmin;
     background-color: #0b4054;
     background: -moz-linear-gradient(-45deg,  #0b4054 0%, #0a3c4e 100%); /* FF3.6-15 */
@@ -349,19 +355,34 @@ select:disabled {
     background: linear-gradient(135deg,  #0b4054 0%,#0a3c4e 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#116381', endColorstr='#005d7f',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
     margin-left:2%;
-    margin-right:2%;
+    margin-right:1%;
     overflow: visible;
-    height: 80%;
-    width:94%;
+    height:36vh;
+    flex: 0;
+    flex-basis: auto;
+    width:76vh;
 }
 
+#description {
+    flex: 1;
+    border-radius: 0.5vmin;
+    background-color: #0b4054;
+    background: -moz-linear-gradient(-45deg,  #0b4054 0%, #0a3c4e 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(-45deg, #0b4054 0%, #0a3c4e 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(135deg,  #0b4054 0%,#0a3c4e 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#116381', endColorstr='#005d7f',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    margin-left:1%;
+    margin-right:2%;
+    height:36vh;
+    overflow: scroll;
+}
 #radar{
     vertical-align: center;
     overflow: visible;
     height: 34vh;
     width: 34vh;
-    margin-left:2%;
-    margin-right:1%;
+    margin-left:2vh;
+    margin-right:1vh;
     display: inline-block;
     margin-bottom: 2%;
 }
@@ -372,7 +393,24 @@ select:disabled {
     height: 34vh;
     width: 34vh;
     display: inline-block;
-    margin-left:1%;
-    margin-right:2%;
+    margin-left:1vh;
+    margin-right:2vh;
     margin-bottom: 2%;
+}
+
+#IV_select{
+    text-align: left;
+    height:10%;
+    width:100%;
+    background-color: #082F3D;
+    display: flex;
+    align-items: center;
+    color: #fff;
+    margin: 0;
+    border-radius: 0.5vmin 0.5vmin 0 0;
+}
+#IV_select_header{
+    margin-left:auto;
+    display: inline-block;
+    font-size: 25px;
 }
