--- a/main.css
+++ b/main.css
@@ -347,24 +347,7 @@ select:disabled {
     display: flex;
     align-items: center;
 }
-#charts{
-    border-radius: 0.5vmin;
-    background-color: #0b4054;
-    background: -moz-linear-gradient(-45deg,  #0b4054 0%, #0a3c4e 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(-45deg, #0b4054 0%, #0a3c4e 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(135deg,  #0b4054 0%,#0a3c4e 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#116381', endColorstr='#005d7f',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-    margin-left:2%;
-    margin-right:1%;
-    overflow: visible;
-    height:36vh;
-    flex: 0;
-    flex-basis: auto;
-    width:76vh;
-}
-
-#description {
-    flex: 1;
+#cord_div{
     border-radius: 0.5vmin;
     background-color: #0b4054;
     background: -moz-linear-gradient(-45deg,  #0b4054 0%, #0a3c4e 100%); /* FF3.6-15 */
@@ -373,10 +356,30 @@ select:disabled {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#116381', endColorstr='#005d7f',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
     margin-left:1%;
     margin-right:2%;
+    overflow: visible;
     height:36vh;
-    overflow: scroll;
+    flex: 0;
+    flex-basis: auto;
+    width:36vh;
+}
+
+#stats_div {
+    flex: 1;
+    border-radius: 0.5vmin;
+    background-color: #0b4054;
+    background: -moz-linear-gradient(-45deg,  #0b4054 0%, #0a3c4e 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(-45deg, #0b4054 0%, #0a3c4e 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(135deg,  #0b4054 0%,#0a3c4e 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#116381', endColorstr='#005d7f',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    margin-left:2%;
+    margin-right:1%;
+    height:36vh;
+    display: flex;
+    align-items: center;
 }
 #radar{
+    flex: 0;
+    flex-basis: auto;
     vertical-align: center;
     overflow: visible;
     height: 34vh;
@@ -384,7 +387,6 @@ select:disabled {
     margin-left:2vh;
     margin-right:1vh;
     display: inline-block;
-    margin-bottom: 2%;
 }
 
 #chord{
@@ -393,24 +395,13 @@ select:disabled {
     height: 34vh;
     width: 34vh;
     display: inline-block;
-    margin-left:1vh;
+    margin-left:2vh;
     margin-right:2vh;
-    margin-bottom: 2%;
 }
 
-#IV_select{
-    text-align: left;
-    height:10%;
-    width:100%;
-    background-color: #082F3D;
-    display: flex;
-    align-items: center;
-    color: #fff;
-    margin: 0;
-    border-radius: 0.5vmin 0.5vmin 0 0;
-}
-#IV_select_header{
-    margin-left:auto;
-    display: inline-block;
-    font-size: 25px;
+#stats_progression {
+    flex: 1;
+    margin-left:1vh;
+    margin-right:2vh;
+    height:34vh;
 }
