--- a/main.css
+++ b/main.css
@@ -40,7 +40,7 @@ body
     background: -webkit-linear-gradient(-45deg, #0b4054 0%, #0a3c4e 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(135deg,  #0b4054 0%,#0a3c4e 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#116381', endColorstr='#005d7f',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-     width: 100%;
+    width: 100%;
     max-height: 35.89vh;
     max-width: 53.835vh;
      /* whatever width you want */
@@ -88,6 +88,9 @@ body
     margin-top: 2%;
     margin-bottom: 1%;
     height: 97%;
+    box-sizing:border-box;
+    padding-left: 1vw;
+    padding-right: 1vw;
 }
 
 #CHART {
@@ -217,6 +220,11 @@ select:disabled {
     align-items: center;
     height: 100%;
     width:100%;
+    box-sizing:border-box;
+    padding-top: 1vw;
+    padding-bottom: 1vw;
+    padding-left: 1vw;
+    padding-right: 1vw;
 }
 
 #pokemon_header > p {
@@ -318,7 +326,6 @@ select:disabled {
 
 #pokemon_image{
     max-width:80%;
-    height: 75%;
     margin: 5%;
     left:0;
     background:url(UI_images/holder.svg);
@@ -334,15 +341,14 @@ select:disabled {
     background: linear-gradient(135deg,  #0a3c4e 0%,#082F3D 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#116381', endColorstr='#005d7f',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
     border-radius: 0.5vmin;
-    margin-left:2%;
     overflow: hidden;
-    height: 80%;
+    height: 100%;
     text-align: center;
     width: 25vw;
 }
 
 #secondary_div {
-    height: 80%;
+    height: 100%;
     width:94%;
     display: flex;
     align-items: center;
@@ -354,13 +360,15 @@ select:disabled {
     background: -webkit-linear-gradient(-45deg, #0b4054 0%, #0a3c4e 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(135deg,  #0b4054 0%,#0a3c4e 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#116381', endColorstr='#005d7f',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-    margin-left:1%;
-    margin-right:2%;
     overflow: visible;
-    height:36vh;
+    margin-left:2vw;
+    margin-right:1vw;
+    height: 100%;
     flex: 0;
     flex-basis: auto;
     width:36vh;
+    display: flex;
+    justify-content: center;
 }
 
 #stats_div {
@@ -371,37 +379,204 @@ select:disabled {
     background: -webkit-linear-gradient(-45deg, #0b4054 0%, #0a3c4e 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(135deg,  #0b4054 0%,#0a3c4e 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#116381', endColorstr='#005d7f',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-    margin-left:2%;
-    margin-right:1%;
-    height:36vh;
+    margin-left:1vw;
+    height: 100%;
     display: flex;
-    align-items: center;
+    justify-content: center;
 }
 #radar{
     flex: 0;
     flex-basis: auto;
-    vertical-align: center;
     overflow: visible;
-    height: 34vh;
-    width: 34vh;
+    height: 100%;
     margin-left:2vh;
     margin-right:1vh;
     display: inline-block;
+    width: 34vh;
 }
-
 #chord{
     vertical-align: center;
     overflow: visible;
-    height: 34vh;
+    height: 100%;
     width: 34vh;
     display: inline-block;
-    margin-left:2vh;
-    margin-right:2vh;
 }
 
 #stats_progression {
+    height:70%;
+}
+#progression
+{
     flex: 1;
     margin-left:1vh;
     margin-right:2vh;
-    height:34vh;
+    height:100%;
+}
+#adjustIV_div{
+    box-sizing:border-box;
+    height:30%;
+    width:100%;
+    padding-bottom: 3%;
+}
+#clip_stats{
+    border-radius: 0.5vh;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+    height:100%;
+    width: 100%;
+ }
+input[type=range][orient=vertical]
+{
+    writing-mode: bt-lr; /* IE */
+    -webkit-appearance: slider-vertical; /* WebKit */
+    width: 8px;
+    height: 76%;
+    padding:0.5%;
+}
+.vert_slider
+{
+    text-align: center;
+    box-sizing:border-box;
+    height: 100%;
+    display: inline-block;
+    flex: 1;
+}
+.statHeader
+{
+    color: #FFF;
+    padding-bottom: 0;
+    text-align: center;
+    height: 20%;
+    font-size: 15px;
+    width:100%;
+}
+
+#nature_div
+{
+    flex:2;
+}
+#nature
+{
+    display: block;
+    height:80%;
+    width:100%;
+    color: #FFF;
+    font-size: 15px;
+    border-style: none;
+    background-color: #116381;
+}
+#nature > option
+{
+    padding-left: 5%;
+}
+#nature_header
+{
+    text-align: center;
+    height: 20%;
+    width:100%;
+    color: #FFF;
+    font-size: 15px;
+    background-color: #082F3D;
+}
+#HP_header
+{
+     background-color: #b20000;
+}
+#attack_header
+{
+    background-color: #d8732b;
+}
+#defense_header
+{
+    background-color: #dfbb2b;
+}
+#s_attack_header
+{
+    background-color: #6890F0;
+}
+#s_defense_header
+{
+    background-color: #78C850;
+}
+#speed_header
+{
+    background-color: #F85888;
+}
+#HP_div
+{
+    background-color: #ff9999;
+}
+#attack_div
+{
+    background-color: #f6b282;
+}
+#defense_div
+{
+    background-color: #efdd95;
+}
+#s_attack_div
+{
+    background-color: #b3c7f7;
+}
+#s_defense_div
+{
+    background-color: #bbe3a7;
+}
+#speed_div
+{
+    background-color: #fbabc3;
+}
+select:focus {
+    outline:none;
+}
+input[type="range"]
+ {
+     margin-top:3.75vh;
+     cursor: pointer;
+     width: 7vh !important;
+     -webkit-appearance: none;
+     z-index: 200;
+     width:7vh;
+     border: 1px solid #e6e6e6;
+     background-color: #e6e6e6;
+     background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#e6e6e6), to(#d2d2d2));
+     background-image: -webkit-linear-gradient(right, #e6e6e6, #d2d2d2);
+     background-image: -moz-linear-gradient(right, #e6e6e6, #d2d2d2);
+     background-image: -ms-linear-gradient(right, #e6e6e6, #d2d2d2);
+     background-image: -o-linear-gradient(right, #e6e6e6, #d2d2d2);
+ }
+input[type="range"]:focus
+{
+    border: 0 !imporant;
+    outline: none !important;
+}
+input[type="range"]::-webkit-slider-thumb
+{
+    -webkit-appearance: none;
+    width: 10px;
+    height: 10px;
+    background-color: #116381;
+    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#116381), to(#005d7f));
+    background-image: -webkit-linear-gradient(right, #116381, #005d7f);
+    background-image: -moz-linear-gradient(right, #116381, #005d7f);
+    background-image: -ms-linear-gradient(right, #116381, #005d7f);
+    background-image: -o-linear-gradient(right, #116381, #005d7f);
+}
+input[type="range"].round {
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+}
+input[type="range"].round::-webkit-slider-thumb {
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+}
+.stats_slider
+{
+    -webkit-transform:rotate(-90deg);
+    -moz-transform:rotate(-90deg);
+    -o-transform:rotate(-90deg);
+    -ms-transform:rotate(-90deg);
+    transform:rotate(-90deg);
 }
